@@ -1,12 +1,15 @@
-// Attaches a JAR to the archives artifact for a library
 android.libraryVariants.all { variant ->
-  // Only attach a jar for non-debug build types.
-  if (!variant.buildType.isDebuggable()) {
+    // Only attach a jar for non-debug build types.
     def name = variant.buildType.name
-    def task = project.tasks.create "jar${name.capitalize()}", Jar
-    task.dependsOn variant.javaCompile
-    // Include Java classes
-    task.from variant.javaCompile.destinationDir
-    artifacts.add('archives', task);
-  }
+    def task = project.tasks.create("jar${name.capitalize()}", Jar) {
+        dependsOn variant.javaCompileProvider
+        // Include Java classes
+        from variant.javaCompileProvider.get().destinationDirectory
+    }
+    artifacts.add('archives', task)
+
+    // Add JVM arguments to the javaCompile task
+    variant.javaCompileProvider.configure {
+        options.forkOptions.jvmArgs += ['--add-opens', 'java.base/java.io=ALL-UNNAMED']
+    }
 }
